k8s/site/deployment-site.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-v1
  namespace: site-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: site
      version: v1
  template:
    metadata:
      labels:
        app: site
        version: v1
    spec:
      containers:
      - name: whereami
        image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.11
        ports:
          - containerPort: 8080
