k8s/site/service-site.yml
apiVersion: v1
kind: Service
metadata:
  name: site-v1
  namespace: site-ns
spec:
  selector:
    app: site
    version: v1
  ports:
  - port: 8080
    targetPort: 8080
