k8s/site/httproute-external-site.yml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: site-external
  namespace: site-ns
spec:
  parentRefs:
  - kind: Gateway
    name: external-http
    namespace: infra-ns
  hostnames:
  - "site.gateway-demo.dh6n.com"
  rules:
  - backendRefs:
    - name: site-v1
      port: 8080
